03/kube/knote.yaml
apiVersion: v1
kind: Service
metadata:
  name: knote
  namespace: ns-my-java-app
spec:
  selector:
    app: knote
  ports:
    - port: 80
      targetPort: 3000
  type: LoadBalancer
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: knote
  namespace: ns-my-java-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: knote
  template:
    metadata:
      labels:
        app: knote
    spec:
      containers:
        - name: knote
          image: learnk8s/knote-js:1.0.0
          ports:
            - containerPort: 3000
          imagePullPolicy: Always
          resources:
            limits:
              cpu: "1"
              memory: 128Mi
            requests:
              cpu: "0.2"
              memory: 64Mi
