03/kube/mongo.yaml
apiVersion: v1
kind: Service
metadata:
  name: mongo
  namespace: ns-my-java-app
spec:
  selector:
    app: mongo
  ports:
    - port: 27017
      targetPort: 27017
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mongo
  namespace: ns-my-java-app
spec:
  selector:
    matchLabels:
      app: mongo
  template:
    metadata:
      labels:
        app: mongo
    spec:
      containers:
        - name: mongo
          image: mongo:6.0.2-focal
          ports:
            - containerPort: 27017
          volumeMounts:
            - name: storage
              mountPath: /data/db
          resources:
            requests:
              cpu: "0.2"
              memory: 128Mi
            limits:
              cpu: "1"
              memory: 256Mi
      volumes:
        - name: storage
          persistentVolumeClaim:
            claimName: mongo-pvc
