03/kube/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: knote-ingress
  namespace: ns-my-java-app
spec:
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: knote
            port:
              number: 80
